[package]
name = "scouter-events"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Logic for setting up and running Scouter event-driven consumers and producers"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
crossbeam-queue = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
ndarray = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
rusty-logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scouter-contracts = { workspace = true }
scouter-drift = { workspace = true }
scouter-error = { workspace = true }
scouter-settings = { workspace = true }
scouter-sql = { workspace = true, optional = true }
scouter-types = { workspace = true }
sqlx = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# RabbitMQ dependencies
lapin = { workspace = true, optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
rdkafka = { version = "0.*", features = ["cmake-build", "ssl"] , optional = true}

[target.'cfg(target_os = "windows")'.dependencies]
rdkafka = { version = "0.*", features = ["cmake-build", "ssl-vendored"] , optional = true}

[dev-dependencies]
ndarray-rand = { workspace = true }

[features]
default = ["sql"]
kafka = ["rdkafka"]
kafka-vendored = ["rdkafka/cmake-build", "rdkafka/ssl-vendored"]
rabbitmq = ["lapin"]
sql = ["scouter-sql", "sqlx"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
