[package]
name = "scouter-macro"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Macro utilities for scouter"

[lib]
proc-macro = false

[dependencies]
thiserror = { workspace = true }