[package]
name = "scouter-mocks"
version = { workspace = true }
edition = "2021"

[dependencies]
chrono = { workspace = true }
pyo3 = { workspace = true }
mockito = { workspace = true, optional = true }
potato-head = { workspace = true , features = ["mock"] }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
scouter-tonic = { workspace = true, optional = true, features = ["all"] }
scouter-client = { workspace = true }
scouter-server = { workspace = true , optional = true, features = ["kafka", "rabbitmq", "redis_events"] }
scouter-types = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = []
server = [
    "tokio",
    "reqwest",
    "mockito",
    "serde_json",
    "scouter-server",
    "scouter-tonic/all",
    "tracing-subscriber",
    "rand",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
debug = false