[package]
name = "scouter-semver"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = "MIT"
description = "Scouter semver logic"

[lib]
doctest = false

[dependencies]
pyo3 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }