[package]
name = "scouter-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Rust Scouter server logic"

[dependencies]
scouter-error = { workspace = true }
scouter-types = { workspace = true }
scouter-contracts = { workspace = true }
scouter-dispatch = { workspace = true }
scouter-drift = { workspace = true, features = ["sql"] }
scouter-observability = { workspace = true }
scouter-sql = { workspace = true }

anyhow = {workspace = true}
axum = {workspace = true}
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
scouter-settings = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}

# Kafka dependencies
rdkafka = { workspace = true, optional = true}

# RabbitMQ dependencies
lapin = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.*"
http-body-util = "0.*"
ndarray-rand = "0.*"
mockito = "1.*"
tower = { version = "0.*", features = ["util"] }

[features]
default = []
kafka = ["rdkafka"]
rabbitmq = ["lapin"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

