[package]
name = "scouter-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Scouter server logic"

[dependencies]
scouter-dataframe = { workspace = true }
scouter-auth = { workspace = true }
scouter-events = { workspace = true, features = ["kafka", "rabbitmq", "sql"], default-features = false } 
scouter-types = { workspace = true }
scouter-dispatch = { workspace = true }
scouter-drift = { workspace = true, features = ["sql"] }
scouter-observability = { workspace = true }
scouter-sql = { workspace = true }
test-utils = { workspace = true }

anyhow = {workspace = true}
axum = {workspace = true}
axum-extra = { workspace = true, version = "0.*", features = ["cookie"] }
chrono = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
mimalloc = { workspace = true }
password-auth = { workspace = true }
potato-head = { workspace = true }
rand = { workspace = true }
rusty-logging= { workspace = true }
scouter-settings = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}

[dev-dependencies]
approx = "0.*"
http-body-util = "0.*"
ndarray = { workspace = true }
ndarray-rand = "0.*"
mockito = "1.*"
object_store = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tower = { version = "0.*", features = ["util"] }
url = { workspace = true }

[features]
default = []
kafka-vendored = ["scouter-events/kafka-vendored"]
kafka = ["scouter-events/kafka"]
rabbitmq = ["scouter-events/rabbitmq"]
redis_events = ["scouter-events/redis_events"]
mock = ["potato-head/mock"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[[test]]
name = "integration"
path = "tests/lib.rs"
