[package]
name = "scouter-settings"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Client and server contract for scouter"

[dependencies]
scouter-types = { workspace = true }
base64 = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }


[profile.release]
lto = "fat"
codegen-units = 1
strip = true

