[package]
name = "scouter-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Sql library to use with scouter-server"

[dependencies]
scouter-drift = { workspace = true }
scouter-error = { workspace = true }
scouter-types = { workspace = true }
anyhow = {workspace = true}
chrono = { workspace = true, features = ["serde"] }
cron = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}

[dev-dependencies]
tokio = { workspace = true }
sqlx-cli = { version = "0.*", default-features = false, features = ["native-tls", "postgres"] }
tower = { version = "0.*", features = ["util"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

