[package]
name = "scouter-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Sql library to use with scouter-server"

[dependencies]
scouter-contracts = { workspace = true }
scouter-dataframe = { workspace = true }
scouter-error = { workspace = true }
scouter-settings = { workspace = true }
scouter-types = { workspace = true }
anyhow = {workspace = true}
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
cron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
sqlx-cli = { version = "0.*", default-features = false, features = ["native-tls", "postgres"] }
tower = { version = "0.*", features = ["util"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

