[package]
name = "scouter-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Sql library to use with scouter-server"

[dependencies]
scouter-dataframe = { workspace = true }
scouter-settings = { workspace = true }
scouter-types = { workspace = true, features = ["server"] }
scouter-semver =  { workspace = true }
anyhow = {workspace = true}
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
cron = { workspace = true }
itertools = { workspace = true }
potato-head = { workspace = true}
serde = { workspace = true, features = ["derive"] }
semver = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
mock = ["potato-head/mock"]

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
sqlx-cli = { version = "0.*", default-features = false, features = ["native-tls", "postgres"] }
tower = { version = "0.*", features = ["util"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

