[package]
name = "scouter-tracing"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

authors = [
  "Steven Forrester <sjforrester32@gmail.com>"
]

license = "MIT"
description = "Helper crate for tracing instrumentation"

[dependencies]
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { workspace = true }
potato-head = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
scouter-events = { workspace = true }
scouter-settings = { workspace = true }
scouter-state = { workspace = true }
scouter-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
